fix student record input alignment

--- a/resources/sass/components/button.scss
+++ b/resources/sass/components/button.scss
@@ -2,9 +2,9 @@
     border: none;
     font-family: inherit;
     color: inherit;
-    font-weight: 800;
+    font-weight: 600;
     background-color: $color-secondary;
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     text-transform: uppercase;
     font-size: 1.5rem;
     border-radius: 4rem;
